Adjust sidebar to prevent it from being hidden by the header
Add padding to the top of the sidebar to accommodate the fixed header.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -97,7 +97,7 @@
   }
   
   .sidebar {
-    @apply fixed left-0 top-0 h-full w-64 bg-card border-r border-border transform -translate-x-full lg:translate-x-0 transition-transform duration-300 ease-in-out z-30;
+    @apply fixed left-0 top-0 h-full w-64 bg-card border-r border-border transform -translate-x-full lg:translate-x-0 transition-transform duration-300 ease-in-out z-30 pt-16;
   }
   
   .sidebar.open {
